Shake invalid inputs finished

--- a/shake-invalid-input/index.html
+++ b/shake-invalid-input/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
 
+    <form action="#" id="myForm">
+        <div
+            id="errorMessage"
+            class="error-message"
+        >
+            Invalid Input
+        </div>
+        <input
+            type="text"
+            id="inputField"
+            placeholder="Enter some text"
+            required
+        />
+        <button
+            onclick="validateInput()"
+            type="submit"
+        >
+            Submit
+        </button>
+    </form>
     
     <script src="script.js"></script>
 </body>
