--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -29,14 +29,30 @@
 
         <div class="input-group">
             <h3 for="height">Height (cm):</h3>
-            <input type="range" id="height" name="height" min="100" max="250" value="170">
+            <input 
+                type="range" 
+                id="height" 
+                name="height" 
+                min="100" 
+                max="250"
+                value="170"
+                oninput="updateHeightValue(this.value)"
+            >
             <span id="height-value">170</span> cm
         </div>
         <hr>
 
         <div class="input-group">
             <h3 for="weight">Weight (kg):</h3>
-            <input type="range" id="weight" name="weight" min="30" max="250" value="70">
+            <input
+                type="range"
+                id="weight"
+                name="weight"
+                min="30"
+                max="250"
+                value="70"
+                oninput="updateWeightValue(this.value)"
+            >
             <span id="weight-value">70</span> kg
         </div>
         <hr>
