--- a/code-editor/index.html
+++ b/code-editor/index.html
@@ -34,7 +34,7 @@
             <label for="output">
                 <i class="fa-solid fa-play"></i>Output
             </label>
-            <iframe id="output" onkeyup="run()"></iframe>
+            <iframe id="output"></iframe>
         </div>
     </div>
     
