Poll system done

--- a/poll-system/index.html
+++ b/poll-system/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <button onclick="submitVote()">Submit Vote</button>
-            <div id="result"></div>
+            <div style="display: none;" id="result"></div>
         </div>
     </div>
     
