Cash Calculator JS wip

--- a/cash-calculator/index.html
+++ b/cash-calculator/index.html
@@ -18,6 +18,7 @@
                 id="et20"
                 class="cash-input"
                 placeholder="Enter NO. of 20 notes"
+                min="0"
             >
             <span id="txt20" class="cash-text">0</span>
         </div>
@@ -28,6 +29,7 @@
                 id="et50"
                 class="cash-input"
                 placeholder="Enter NO. of 50 notes"
+                min="0"
             >
             <span id="txt50" class="cash-text">0</span>
         </div>
@@ -38,6 +40,7 @@
                 id="et100"
                 class="cash-input"
                 placeholder="Enter NO. of 100 notes"
+                min="0"
             >
             <span id="txt100" class="cash-text">0</span>
         </div>
@@ -48,6 +51,7 @@
                 id="et200"
                 class="cash-input"
                 placeholder="Enter NO. of 200 notes"
+                min="0"
             >
             <span id="txt200" class="cash-text">0</span>
         </div>
@@ -58,6 +62,7 @@
                 id="et500"
                 class="cash-input"
                 placeholder="Enter NO. of 500 notes"
+                min="0"
             >
             <span id="txt500" class="cash-text">0</span>
         </div>
@@ -68,6 +73,7 @@
                 id="et1000"
                 class="cash-input"
                 placeholder="Enter NO. of 1000 notes"
+                min="0"
             >
             <span id="txt1000" class="cash-text">0</span>
         </div>
