Cash Calculator app done

--- a/cash-calculator/index.html
+++ b/cash-calculator/index.html
@@ -82,8 +82,7 @@
             <button id="btnReset">Reset</button>
         </div>
         <div class="row result-part">
-            <span id="txtFinalCash">Total Cash: 0</span>
-            <span id="txtFinalCashInWords">Zero</span>
+            <span id="txtFinalCash">Total Cash: $0</span>
         </div>
     </div>
     
